<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybrid_localization_evaluation_tool</name>
  <version>0.1.0</version>
  <description>
    Desktop evaluation tool for hybrid_localization diagnostics and KPI summaries.
  </description>
  <maintainer email="dev@skyautonet.com">SkyAutoNet</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>qt6-base-dev</build_depend>
  <exec_depend>qt6-base-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
